--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,4 @@
-/*
-    
-    Kindling Core
-	An open-ended starting point.
-
-*/
+/* Presets */
 
 * {
 	margin:0;
@@ -22,38 +17,34 @@
 }
 body {
 	font:300 125%/150% sans-serif;
+	-webkit-font-smoothing:antialiased;
+	-moz-font-smoothing:antialiased;
+	-moz-osx-font-smoothing:grayscale;
 }
-a:active,a:hover,a:focus {
+a {
+	transition:0.2s all ease-in-out;
+	-webkit-transition:0.2s all ease-in-out;
 	outline:0;
 }
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6,p {
 	line-height:140%;
 	font-weight:300;
 	margin:0 0 2rem;
 }
-h1 {
-	font-size:300%;
-}
-h2 {
-	font-size:250%;
-}
-h3 {
-	font-size:200%;
-}
-h4 {
-	font-size:125%;
-}
-h5 {
-	font-size:100%;
-}
-h6 {
-	font-size:80%;
-}
-p {
-	margin-bottom:2rem;
-}
+h1 { font-size:300%; }
+h2 { font-size:250%; }
+h3 { font-size:200%; }
+h4 { font-size:125%; }
+h5 { font-size:100%; }
+h6 { font-size:80%; }
 button,input,select,textarea {
 	font:300 125%/150% sans-serif;
 }
-@media only screen and (max-width: 600px) {
-}
+
+/* Kindling Grid */
+
+.row:after{content:"";display:block;height:0;clear:both;visibility:hidden}.row{margin-bottom:2%}.bottom{margin-bottom:0}[class*=span-]{display:block;float:left;width:100%;margin-right:2%}[class*=span-]:last-child{margin-right:0}[class*=span-] img{max-width:100%;display:block}.span-1{width:6.5%}.span-2{width:15%}.span-3{width:23.5%}.span-4{width:32%}.span-5{width:40.5%}.span-6{width:49%}.span-7{width:57.5%}.span-8{width:66%}.span-9{width:74.5%}.span-10{width:83%}.span-11{width:91.5%}.span-12{width:100%}.offset-1{margin-left:6.5%}.offset-2{margin-left:17%}.offset-3{margin-left:25.5%}.offset-4{margin-left:34%}.offset-5{margin-left:42.5%}.offset-6{margin-left:51%}.offset-7{margin-left:59.5%}.offset-8{margin-left:68%}.offset-9{margin-left:76.5%}.offset-10{margin-left:85%}.offset-11{margin-left:93.5%}@media only screen and (max-width:768px){.row{margin:0}.span-1,.span-10,.span-11,.span-12,.span-2,.span-3,.span-4,.span-5,.span-6,.span-7,.span-8,.span-9{width:100%;margin-bottom:2%}}
+
+/* Begin */
+
+@media only screen and (max-width: 600px) { }
