--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,3 @@
-/* Presets */
-
 * {
 	margin:0;
 	padding:0;
@@ -41,12 +39,6 @@ h5 { font-size:100%; }
 h6 { font-size:80%; }
 button,input,select,textarea {
 	font:300 16px/1.5 sans-serif;
+	outline:0;
 }
-
-/* Kindling Grid */
-
-.row:after{content:"";display:block;height:0;clear:both;visibility:hidden}.row{margin-bottom:2%}.bottom{margin-bottom:0}[class*=span-]{display:block;float:left;width:100%;margin-right:2%}[class*=span-]:last-child{margin-right:0}[class*=span-] img{max-width:100%;display:block}.span-1{width:6.5%}.span-2{width:15%}.span-3{width:23.5%}.span-4{width:32%}.span-5{width:40.5%}.span-6{width:49%}.span-7{width:57.5%}.span-8{width:66%}.span-9{width:74.5%}.span-10{width:83%}.span-11{width:91.5%}.span-12{width:100%}.offset-1{margin-left:6.5%}.offset-2{margin-left:17%}.offset-3{margin-left:25.5%}.offset-4{margin-left:34%}.offset-5{margin-left:42.5%}.offset-6{margin-left:51%}.offset-7{margin-left:59.5%}.offset-8{margin-left:68%}.offset-9{margin-left:76.5%}.offset-10{margin-left:85%}.offset-11{margin-left:93.5%}@media only screen and (max-width:768px){.row{margin:0}.span-1,.span-10,.span-11,.span-12,.span-2,.span-3,.span-4,.span-5,.span-6,.span-7,.span-8,.span-9{width:100%;margin-bottom:2%}}
-
-/* Begin */
-
 @media only screen and (max-width: 600px) { }
